--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam qui velit, facere voluptatem iusto, numquam ab sit consectetur accusantium officia quod, assumenda veritatis animi deleniti. Deserunt vero delectus dolor laudantium.</p>
         </div>
     </div>
+    <div class="bbox">
+        <div class="card">
+            <h1>Box3</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam qui velit, facere voluptatem iusto, numquam ab sit consectetur accusantium officia quod, assumenda veritatis animi deleniti. Deserunt vero delectus dolor laudantium.</p>
+        </div>
+        <div class="card">
+            <h1>Box4</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam qui velit, facere voluptatem iusto, numquam ab sit consectetur accusantium officia quod, assumenda veritatis animi deleniti. Deserunt vero delectus dolor laudantium.</p>
+        </div>
+    </div>
     <div class="footer">
         <p style="color: white;">©Lupu Design</p>
     </div>
